[gd_scene load_steps=19 format=3 uid="uid://c3pyp3j2d7wqj"]

[ext_resource type="Script" path="res://features/conversation/conversation.gd" id="1_rws1i"]
[ext_resource type="Shader" path="res://shaders/4_bit_colour.gdshader" id="3_ff0ew"]
[ext_resource type="FontFile" uid="uid://bexq03pmtmlcr" path="res://fonts/pixel_arial_bold.TTF" id="4_oqenx"]
[ext_resource type="Texture2D" uid="uid://ctwe7vi86s2bt" path="res://textures/portraits/ghost.png" id="5_gm42t"]
[ext_resource type="Texture2D" uid="uid://d2dplo6acuad6" path="res://textures/portraits/boss.png" id="6_d63uw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvsf2"]
shader = ExtResource("3_ff0ew")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_151pw"]
albedo_color = Color(0.0117647, 0.0117647, 0.0117647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yg5lo"]
material = SubResource("StandardMaterial3D_151pw")
size = Vector3(0.05, 0.1, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nx1j7"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_qas3e"]
material = SubResource("StandardMaterial3D_nx1j7")
size = Vector3(0.04, 0.03, 0.001)

[sub_resource type="FontVariation" id="FontVariation_yttja"]
base_font = ExtResource("4_oqenx")
spacing_glyph = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jgeh7"]
shader = ExtResource("3_ff0ew")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_418sq"]
shader = ExtResource("3_ff0ew")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6ist"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gex5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvdg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jti5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6tm1"]

[node name="Conversation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rws1i")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_cvsf2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -240.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(380, 320)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="Phone" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, -0.07, -0.16)
mesh = SubResource("BoxMesh_yg5lo")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Phone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0298051, -0.00589442)
mesh = SubResource("BoxMesh_qas3e")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -240.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.12549)

[node name="PhoneCallMessage" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 104.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.862745, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontVariation_yttja")
theme_override_font_sizes/font_size = 16
text = "!!! CALLING H.Q. !!!"
horizontal_alignment = 1

[node name="PlayerText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -115.0
offset_right = -260.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_oqenx")
theme_override_font_sizes/font_size = 16
text = "This is some text in order to test full sections of dialogue and make it work nicely."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BossBox" type="ColorRect" parent="."]
custom_minimum_size = Vector2(190, 145)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 165.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="BossBox"]
material = SubResource("ShaderMaterial_jgeh7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_d63uw")

[node name="Label" type="Label" parent="BossBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 22.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0.862745, 0, 1)
theme_override_fonts/font = ExtResource("4_oqenx")
theme_override_font_sizes/font_size = 8
text = "BOSS"
horizontal_alignment = 2

[node name="GhostBox" type="ColorRect" parent="."]
custom_minimum_size = Vector2(190, 145)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 165.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="GhostBox"]
material = SubResource("ShaderMaterial_418sq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gm42t")

[node name="Label" type="Label" parent="GhostBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 22.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0.862745, 0, 1)
theme_override_fonts/font = ExtResource("4_oqenx")
theme_override_font_sizes/font_size = 8
text = "???"
horizontal_alignment = 2

[node name="Tagline" type="ColorRect" parent="."]
custom_minimum_size = Vector2(190, 145)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 195.0
offset_right = -20.0
offset_bottom = 340.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="BossText" type="Label" parent="Tagline"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_oqenx")
theme_override_font_sizes/font_size = 8
text = "This box contains text as spoken by the other person in the conversation."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Clicker" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6ist")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gex5v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nvdg0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jti5v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d6tm1")
action_mode = 0
flat = true
